refactor: 오타수정및 불필요한 코드 삭제와 변경